Changed server port to 8888

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.security.oauth2.client.registration.github.scope=read:user
 #spring.security.oauth2.client.registration.google.client-id=xxx
 #spring.security.oauth2.client.registration.google.client-secret=xxx
 spring.security.oauth2.client.registration.google.scope=profile
+
+server.port=8888
+```
