--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,12 @@ spring.security.oauth2.client.registration.github.scope=read:user
 spring.security.oauth2.client.registration.google.scope=profile
 
 server.port=8888
-```
+
+spring.datasource.url=jdbc:h2:~/clientDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=false
+spring.jpa.hibernate.ddlAuto=update
+spring.h2.console.settings.web-allow-others=true
