Disable google scopes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.security.oauth2.client.registration.github.scope=read:user
 #Google Login
 #spring.security.oauth2.client.registration.google.client-id=xxx
 #spring.security.oauth2.client.registration.google.client-secret=xxx
-spring.security.oauth2.client.registration.google.scope=profile
+#spring.security.oauth2.client.registration.google.scope=profile
 
 server.port=8888
 
